# agent-base

./: .gitignore  CHANGELOG.md  READING_GUIDE.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
agent_kernel/: __init__.py  abort.py  agents.py  config.py  context_compaction.py  hooks.py  mcp.py  memory.py  memory_chain.py  messages.py  model_provider.py  path_utils.py  path_validation.py  permissions.py  prompt_composer.py  query.py  query_engine.py  sdk.py  session.py  session_diagnostics.py  skills.py  tool_execution.py  web_adapters.py  workspace.py
agent_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agent_kernel/tools/: __init__.py  base.py  bash.py  file_tools.py  prompts.py  search_tools.py  todo.py  web_tools.py
docs/: cli-v0.5.md  config-v0.5.md  mcp-memory-session-v0.6.md  mcp-v0.5.md  release-v0.2.md  release-v0.3.md  release-v0.4.md  release-v0.5.md  release-v0.6.md  release-v0.7.md  session-memory-v0.5.md  skills-v0.5.md  smoke-v0.3.md
examples/: __init__.py  local_agent.py
examples/mcp/: echo-mcp.json  stdio-config.json  stdio-mcp.json  stdio_echo_server.py
tests/: test_agents.py  test_capability_contracts.py  test_hooks.py  test_local_agent_combined.py  test_local_agent_runner.py  test_mcp.py  test_packaging.py  test_permissions_tools_query.py  test_prompt_memory_session.py  test_real_mcp_smoke.py  test_real_runner_e2e.py  test_real_smoke.py  test_sdk_transcript.py  test_skills.py  test_tool_ecosystem.py  test_tool_registry_contracts.py  test_transcript_contracts.py  test_v06_chain.py  test_workspace_runtime.py
(+1 files in other folders)
